Use helper function for network constructor tests